--- a/Personajes.html
+++ b/Personajes.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="Principal.html" class="volver-inicio">Volver al Inicio</a>
+    <a href="index.html" class="volver-inicio">Volver al Inicio</a>
 
     <div class="titulo">
         PERSONAJES DE DRAGON BALL
