--- a/VerTemporadas.html
+++ b/VerTemporadas.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="VerTemporadas.html" class="volver-inicio">Volver al Inicio</a>
+    <a href="index.html" class="volver-inicio">Volver al Inicio</a>
     
     <div class="titulo">
         TEMPORADAS DE DRAGON BALL
